test/bad/generics/def04.px

func f<N>(x: N) def
    y = N

f(4)
